--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="ssaa.html">Шкибиди туалет</a></li>
                     <li><a href="https://dzen.ru/video/watch/63fd25f442bde33eeb63571a?share_to=link">Кто я</a></li>
                     <li><a href="https://gnomoslog.github.io/shop/">Сайт</a></li>
+                    <li><a href="index copy.html">Паралакс</a></li>
                 </ul>
             </nav>
         </div> 
