--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="https://dzen.ru/video/watch/63fd25f442bde33eeb63571a?share_to=link">Кто я</a></li>
                     <li><a href="https://gnomoslog.github.io/shop/">Сайт</a></li>
                     <li><a href="index copy.html">Паралакс</a></li>
+                    <li> <a href="dack.html">Утки</a></li>
                 </ul>
             </nav>
         </div> 
