--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         
         <div class="product-box">
             <div class="product">
-                <img class="product_img" src="https://goo.su/p3dQJya" alt="Silksong ">
+                <img class="product_img" src="i (5).webp" alt="Silksong ">
                 <div class="pocupca">
                     <a href="#" class="old">1999 Ckinhed</a>
                     <p class="solid">480 Gnoms </p>
